<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            style="@style/TitleTextStyle"
            android:text="@string/choose_action" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/ButtonPhonebookView"
        style="@style/MainButtonsStyle"
        android:layout_width="@dimen/web_page_button_size_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_layout_margin"
        android:text="@string/open_phonebook" />

    <Button
        android:id="@+id/ButtonCustomView"
        style="@style/MainButtonsStyle"
        android:layout_width="@dimen/web_page_button_size_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_layout_margin"
        android:text="@string/open_customview" />

    <Button
        android:id="@+id/ButtonWebPageView"
        style="@style/MainButtonsStyle"
        android:layout_width="@dimen/web_page_button_size_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_layout_margin"
        android:text="@string/open_web_page" />

</LinearLayout>