<?xml version="1.0" encoding="UTF-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />




    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/phoneRadioButton"
            style="@style/RadioButtonStyle"
            android:checked="true"
            android:text="@string/phone_number" />

        <RadioButton
            android:id="@+id/emailRadioButton"
            style="@style/RadioButtonStyle"
            android:text="@string/email" />

    </RadioGroup>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/phoneEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:hint="@string/phone_number"
        android:inputType="phone" />

</LinearLayout>